--- a/infodeb/DVPM/index.html
+++ b/infodeb/DVPM/index.html
@@ -37,21 +37,19 @@ Bypass MDM (Quản Lý Từ Xa) :100k All Model
 <br>
 <li>
 iPhone 5S/6G/6Plus: 70k Hello :50k
+
 <br>
 <li>
-iPhone SE (2016) : 150K Hello : 100k
+iPhone SE (2016)/6s/6splus : 100k 
 <br>
 <li>
-iPhone 6s/6splus :150k Hello :100k
+iPhone 7/7Plus : 100k 
 <br>
 <li>
-iPhone 7/7Plus : 150k Hello :100k
+iPhone 8/8Plus : 150K
 <br>
 <li>
-iPhone 8/8Plus :200 Hello: 150K
-<br>
-<li>
-iPhone X : 200k Hello:150k
+iPhone X : 150k Hello :100
 <br>
 <li>
 iPad Gen 5,Gen 6, Gen 7 : 200k
