--- a/infodeb/Lunartime/index.html
+++ b/infodeb/Lunartime/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-Thêm ngày tháng Âm Lịch vào phía trên góc trái màn hình của bạn
+Thêm ngày tháng Âm Lịch vào phía trên góc trái màn hình của bạn .Hỗ trợ các dòng máy có Tai Thỏ
 
 <br>
 <li>
 
-Các dòng máy từ 6S tới 8plus yêu cầu cài thêm Tweak Fake X
-
+Các dòng máy từ 6S tới 8plus yêu cầu phiên bản Lunartime Plus
 <br>
 <li>
 
@@ -38,12 +37,12 @@ Phiên Bản Mới Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-1.2
+1.3
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-20/8/2020
+04/1/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -53,7 +52,7 @@ Phiên Bản Mới Nhất Hiện Tại.
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-13 - 14.8
+12 - 14.8
 
 
 
