--- a/infodeb/Lunartimeplus/index.html
+++ b/infodeb/Lunartimeplus/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-Thêm ngày tháng Âm Lịch vào phía trên góc trái màn hình của bạn .Hỗ trợ các dòng máy có Tai Thỏ
-
+Thêm ngày tháng Âm Lịch vào phía trên góc trái màn hình của bạn .Hỗ trợ các dòng máy không có Tai Thỏ
 <br>
 <li>
 
-Các dòng máy từ 6S tới 8plus yêu cầu phiên bản Lunartime Plus
-<br>
-<li>
 
 Các bạn có thể xem hình ảnh phía dưới 
 
@@ -37,7 +33,7 @@ Phiên Bản Mới Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-1.3
+1.0
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
@@ -53,6 +49,7 @@ Phiên Bản Mới Nhất Hiện Tại.
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
 12 - 15.1
+
 
 
 </td></tr></tbody></table>
