--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ LIÊN HỆ CHO TÔI QUA
 
 <div class="animated fadeInUp" id="bottomnavnar">
 <br>
-<div>Trang web được phát triển bởi BIỆN VĂN NHẬT ©2022</div>
+<div>Trang web được phát triển bởi NHẬT BIỆN ©2023</div>
 </div>
 
 </body>
