--- a/infodeb/BatteryPercent/index.html
+++ b/infodeb/BatteryPercent/index.html
@@ -22,7 +22,7 @@
 
 <li>
 
-Phiên Bản mới Nhất Hiện Tại.
+v1.0.1 fix lỗi trên iOS12
 
 </li>
 
@@ -30,17 +30,17 @@ Phiên Bản mới Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-1.0
+1.0.1
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-26/01/2023
+27/01/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
 
-8 KB
+13 KB
 
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
