--- a/infodeb/BioProtect/index.html
+++ b/infodeb/BioProtect/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-<red>Bảo vệ thiết bị của bạn bằng Touch ID hoặc mật mã. 
+<red>Bảo vệ thiết bị của bạn bằng Touch ID ,Face ID hoặc mật mã. 
 <br>
 <li>
 Tinh chỉnh BioProtect phổ biến và vô cùng hữu ích. Tinh chỉnh này có thể khóa các ứng dụng và thư mục cụ thể trên thiết bị Jailbroken của bạn và xác thực quyền truy cập vào chúng thông qua Face ID. Mặc dù điểm nổi bật chính của BioProtect X là bổ sung hỗ trợ Face ID, nhưng tinh chỉnh cũng hoạt động với Touch ID và mật mã cũ tốt như trước. Chỉ cần nhấn vào biểu tượng để mở ứng dụng và Face ID sẽ tự động quét khuôn mặt của bạn. Khi xác thực đi qua, bạn sẽ có quyền truy cập vào ứng dụng mà không cần bất kỳ nỗ lực hoặc thời gian nào
@@ -34,12 +34,12 @@ Sửa lỗi không vào được Tweak
 
 <tr><td>Phiên bản</td><td>
 
-4.7
+4.7-46R
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-27/08/2022
+29/01/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -49,10 +49,10 @@ Sửa lỗi không vào được Tweak
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-12.0 - 14.8.1
+12.0 - 15.1.1
 
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2022 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
