--- a/infodeb/Esim/index.html
+++ b/infodeb/Esim/index.html
@@ -35,7 +35,7 @@ Apple lẽ ra phải làm thêm tính năng chọn SIM khi họ sản xuất iPh
 
 <li>
 
-Phiên Bản Mới Nhất Hiện Tại.
+Fix lỗi & Crack
 
 </li>
 
@@ -43,7 +43,7 @@ Phiên Bản Mới Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-1.14-beta-2
+1.16-beta-2
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
@@ -63,4 +63,4 @@ Phiên Bản Mới Nhất Hiện Tại.
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
