--- a/infodeb/Picsart/index.html
+++ b/infodeb/Picsart/index.html
@@ -2,6 +2,15 @@
 <br><li><span>
 
 <Red>Picsart cao cấp,hỗ trợ phiên bản mới nhất!
+<br>
+<li>
+
+<blue> Chú ý:
+
+<br>
+<li>
+
+iOS 14 trở lên Tweak này vẫn hoạt động bình thường khi mất Jailbreak
 
 </span></li></lable><br>
 <ul class="screenshot-viewer">
@@ -25,13 +34,13 @@ Phiên bản mới nhất
 
 <tr><td>Phiên bản</td><td>
 
-21.4.7
+21.5.4
 
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-01/02/2023
+06/02/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
