--- a/infodeb/PowerSelector/index.html
+++ b/infodeb/PowerSelector/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-<blue>PowerSelector là một tweak dành cho iOS 11 tới Ios 14 đã jailbreak giúp bạn thêm một số tuỳ chọn hay dùng vào Control Center.</blue>
+<blue>PowerSelector là một tweak dành cho iOS 11 tới Ios 16 đã jailbreak giúp bạn thêm một số tuỳ chọn hay dùng vào Control Center.</blue>
 
 <br>
 <li>
@@ -78,24 +78,24 @@ Phiên Bản Tốt Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-1.1.1
+1.3.7
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-3/12/2020
+5/03/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
 
-24 MB
+999 kb
 
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-13.0 - 14.8
+11.0- 16.3
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
