--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ LIÊN HỆ CHO TÔI QUA
 
 <div class="animated fadeInUp" id="bottomnavnar">
 <br>
-<div>Trang web được phát triển bởi NHẬT BIỆN ©2023</div>
+<div>Copyright © 2023 - Nhật Biện - VietNam Production</div>
 </div>
 
 </body>
