--- a/infodeb/Fakeios/index.html
+++ b/infodeb/Fakeios/index.html
@@ -36,7 +36,7 @@ Bước 4: Kích hoạt bỏ sim ghép, thay sim thoải mái ko giới hạn
 <br>
 <li>
 
-<a class="btn btn-xs btn-primary" href="https://www.facebook.com/SUPPORT.BVN.VN"># Chú Ý: HIỆN TẠI IOS 16.0.CHƯA THỂ JAILBREAK NÊN ANH EM KHÔNG NÊN TẮT NGUỒN MÁY KHI ĐANG FAKE IOS 16.0</a>
+<a class="btn btn-xs btn-primary" href="https://www.facebook.com/SUPPORT.BVN.VN"># Chú Ý: HIỆN TẠI IOS 16.3.1 CHƯA THỂ JAILBREAK NÊN ANH EM KHÔNG NÊN TẮT NGUỒN MÁY KHI ĐANG FAKE IOS 16.3.1</a>
 
 
 <br>
@@ -69,11 +69,11 @@ Phiên Bản Mới Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-16.0~beta
+16.3.1
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
-09/06/2022
+8/03/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -83,9 +83,9 @@ Phiên Bản Mới Nhất Hiện Tại.
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-10.0 - 14.8
+10.0 - 15.7.3
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2022 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
