--- a/infodeb/BioProtect/index.html
+++ b/infodeb/BioProtect/index.html
@@ -26,7 +26,7 @@ Tinh chỉnh BioProtect phổ biến và vô cùng hữu ích. Tinh chỉnh này
 
 <li>
 
-Sửa lỗi không vào được Tweak
+Hỗ trợ thêm iOS 16
 
 </li>
 
@@ -34,12 +34,12 @@ Sửa lỗi không vào được Tweak
 
 <tr><td>Phiên bản</td><td>
 
-4.7-46R
+4.8
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-29/01/2023
+14/3/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -49,7 +49,7 @@ Sửa lỗi không vào được Tweak
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-12.0 - 15.1.1
+12.0 - 16.3
 
 
 
