--- a/infodeb/SettingsRevamp/index.html
+++ b/infodeb/SettingsRevamp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-Phia chia các mục trong Cài đặt của bạn. 
+Phân chia các mục trong Cài đặt của bạn. 
 
 <br>
 <li>
