--- a/index.html
+++ b/index.html
@@ -299,248 +299,6 @@ Link Cài Trực Tiếp TrollStore iOS 14-15
 <br>
 </center>
 
-    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-BYPASS GOOGLE ACCOUNT 2022
-    </div>
-
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
-
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="caidatblur zoom">
-  <div class="caidatblur-inside">
-    <img onclick="location.href='intent://com.android.settings/#Intent;scheme=android-app;end';" src="./assets/caidat.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">Mở/Open Setting</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="Chromeblur zoom">
-  <div class="Chromeblur-inside">
-    <img onclick="location.href='intent://com.android.chrome/#Intent;scheme=android-app;end';" src="./assets/chorm.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Mở/Open Chrome</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="screenblur zoom">
-  <div class="screenblur-inside">
-    <img onclick="location.href='intent://com.google.android.gms/#Intent;scheme=promote_smartlock_scheme;end';" src="./assets/screenlock.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Screen Smartlock</div>
-</div>
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="galaxyblur zoom">
-  <div class="galaxyblur-inside">
-    <img onclick="location.href='intent://com.sec.android.app.samsungapps/#Intent;scheme=android-app;end';" src="./assets/galaxy.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Galaxy Store</div>
-</div>
-<br>
-<br>
-</center>
-
-
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
-
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="myfileblur zoom">
-  <div class="myfileblur-inside">
-    <img onclick="location.href='intent://com.sec.android.app.myfiles/#Intent;scheme=android-app;end';" src="./assets/myfile.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">Samsung MyFiles</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="hiddenblur zoom">
-  <div class="hiddenblur-inside">
-    <img onclick="location.href='https://galaxystore.samsung.com/detail/com.jami.tool.hiddensetting.other?hit_type=Desktop&source=GBadge_01_5395641_setting';" src="./assets/hiden.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Hidden Settings</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="Allianceblur zoom">
-  <div class="Allianceblur-inside">
-    <img onclick="location.href='intent://com.rrivenllc.shieldx/#Intent;scheme=android-app;end';" src="./assets/alliance.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Alliance Shield</div>
-</div>
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="launcherblur zoom">
-  <div class="launcherblur-inside">
-    <img onclick="location.href='intent://com.sec.android.app.launcher/#Intent;scheme=android-app;end';" src="./assets/launcher.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Home Launcher</div>
-</div>
-</center>
-
-
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
-
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="myfileblur zoom">
-  <div class="myfileblur-inside">
-    <img onclick="location.href='intent://com.google.android.gsf.login.LoginActivity/#Intent;scheme=android-app;end';" src="./assets/login.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">Login Account</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="hiddenblur zoom">
-  <div class="hiddenblur-inside">
-    <img onclick="location.href='intent://com.google.android.youtube/#Intent;scheme=android-app;end';" src="./assets/youtube1.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Mở/Open Youtube</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="samsungblur zoom">
-  <div class="samsungkblur-inside">
-    <img onclick="location.href='intent://com.android.settings/com.samsung.android.settings.biometrics.fingerprint.FingerprintEntry/#Intent;scheme=android-app;end';" src="./assets/id.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Samsung TouchID</div>
-</div>
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="samsungblur zoom">
-  <div class="samsungkblur-inside">
-    <img onclick="location.href='intent://com.samsung.android.dialer/#Intent;scheme=android-app;end';" src="./assets/smart.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Smart Switch</div>
-</div>
-</div>
-    <br>
- <br>
- <br>
-<br>
-<br>
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Notification_Bar.apk">Notification_Bar.apk</a>
-<br>
-<br>
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Package_Disabler_Pro.apk">Package_Disabler_Pro.apk</a>
-<br>
-<br>
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Android_5_GAM.apk">Android_5_GAM.apk</a>
-<br>
- <br> 
-<br>
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Android_6_GAM.apk">Android_6_GAM.apk</a>
-<br> 
-<br>
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Android_8-9-10_GAM.apk">Android_8-9-10_GAM.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Google_Setting.apk">Google_Setting.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/FRP_Bypass.apk">FRP_Bypass.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/FRP_Android_7.apk">FRP_Android_7.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/FRP_vnROM.apk">FRP_vnROM.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Test_DPC.apk">Test_DPC.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/QuickShortcutMaker.apk">QuickShortcutMaker.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Apex_Launcher.apk">Apex_Launcher.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Nova_Launcher.apk">Nova_Launcher.apk</a>
-<br>
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Menu_Button.apk">Menu_Button.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/ES_File_Explorer.apk">ES_File_Explorer.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Setting.apk">Setting.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Development_Settings.apk">Development_Settings.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Phone_Clone.apk">Phone_Clone.apk</a>
-<br>
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/HushSMS.apk">HushSMS.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/File_Commander_Manager.apk">Commander_Manager.apk</a>
-<br> 
-<br> 
- <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Smart_Switch_Mobile.apk">Smart_Switch_Mobile.apk</a>
-<br> 
-<br> 
-<br>
-<center>
-
-</div>
-  </div>
-<br>
-<center>
-<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
-</center>
-<br>
-</center>
-
-    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-SAM SUNG TOOL
-    </div>
-
-<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
-
-<center>
-<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
- <div class="odinblur zoom">
-  <div class="odinblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1Y0idY57UVR8Ds52iTvMi3nhpzobDOagU/view?usp=drivesdk';" src="./assets/odin.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadecydia" id="caption">Odin3-V3.14.1</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="Samsungfrpblur zoom">
-  <div class="Samsungfrpblur-inside">
-    <img onclick="location.href='https://mega.nz/file/D1snjYpa#uy1Gk0gMpfoIqv_uACMgDXC3JC4g0LSMWHn44NAzkN8';" src="./assets/frpbypass.png" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">Frp Bypass</div>
-</div>
-
-<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
- <div class="SamFwFRPToolblur zoom">
-  <div class="SamFwFRPToolblur-inside">
-    <img onclick="location.href='https://androidfilehost.com/?fid=14871746926876835679';" src="./assets/samfw.gif" style="width: 125px; height: 125px" class="filter">
-  </div>
- </div>
-<div class="filter animated fadesileo" id="caption">SamFWFrp Tool</div>
-</div>
-</div>
-    <br>
-  <br>
- <br>  
 
 <center>
 
@@ -552,7 +310,7 @@ SAM SUNG TOOL
 <center>
 <img class="filter" src="./assets/arrow.png" width="100px">
 
-<h1 class="filter">KHO LƯU TRỮ IPA</h1>
+<h1 class="filter">ỦNG HỘ TÔI</h1>
 </center>
 
 <center>
@@ -569,18 +327,15 @@ SAM SUNG TOOL
 <div class="packages" id="packages">
 
 </div>
-		<div class="card-body">
-		  <p class="card-text">Nhấp vào bên dưới để tải</p>
-			<a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/1k9zHqSZRrMIhjD1l_1lfG7Bfnj0cXUnv/view?usp=drivesdk"> IPA Facebook Wolf_V355</a>
-          <a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/1gHwFK-w_PuGkV0vhY7uhZIWxtew0YqUF/view?usp=drivesdk">Youtube Uyou 2.1</a>
-          <a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/1BzTQr4UVc_K8B5NnUnWIW57lFCQkdiYg/view?usp=drivesdk"> Mesenger Shark_348</a> 
-            <a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/16A4woDF5703bE131vCYoAkw0vNWD3XJB/view">Appcake No Ads</a>  
-             <a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/1UggKDtFw1HFmT09e1zussUxCtROfW6a5/view?usp=drivesdk">Zalo2_210902</a>  
-              <a class="btn btn-xs btn-primary" href="https://routinehub.co/shortcut/10236/?fbclid=IwAR3zmEPihb0M_PguwbHobWSTnTlNR7Jer0F1zAvxvVK5D1fgVOpstSPhnNE">Phím Tắt Tải Video TikTok Không có Logo</a> 
-              <a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/1Fjn0b6dZ8wIFebm6j1TiT10TJxFhrjUm/view?usp=drivesdk">Ứng dụng xem Phim Hdo Player</a>  
-		</div>
-<a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/1GrR9xnbW2Pdg7Y1PuocIr-2AVJ9JsK4c/view?usp=drivesdk"> IPA TrollStore V1.0.10</a>
-<br>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="sileoblur zoom">
+  <div class="sileoblur-inside">
+    <img onclick="location.href='https://support-jailbreak.github.io/infodeb/DONATE/?p=info';" src="./assets/bank.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Hãy nhấp vào đây </div>
+</div>
 <center>
 <img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
 </center>
