--- a/infodeb/DynamicPeninsula/index.html
+++ b/infodeb/DynamicPeninsula/index.html
@@ -98,7 +98,7 @@ công tắc âm lượng/tắt tiếng
 
 <li>
 
-Phiên bản mới nhất hiện tại
+Cập Nhật hỗ trợ thêm iOS 12
 
 </li>
 
@@ -106,12 +106,12 @@ Phiên bản mới nhất hiện tại
 
 <tr><td>Phiên bản</td><td>
 
-0.1-169
+0.3-2
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-29/12/2022
+26/3/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -121,7 +121,7 @@ Phiên bản mới nhất hiện tại
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-13.0 - 14.8.1
+12.0 - 16.3
 
 
 
