--- a/infodeb/DynamicPeninsula/index.html
+++ b/infodeb/DynamicPeninsula/index.html
@@ -3,7 +3,7 @@
 
 
 <blue>Dynamic Island trên notch của bạn! 
-Mang hầu hết các hiệu ứng đảo động của iPhone 14 Pro trên tất cả các thiết bị có tai thỏ! Thưởng thức hình ảnh động chất lỏng Dynamic Peninsula trên iPhone X, XS, iPhone 11, iPhone 12, iPhone 13, v.v. Bán đảo động cung cấp giao diện người dùng hoạt hình linh hoạt cho các mục sau: </blue>
+Mang hầu hết các hiệu ứng đảo động của iPhone 14 Pro trên tất cả các thiết bị có tai thỏ! Thưởng thức hình ảnh động chất lỏng Dynamic Peninsula trên iPhone  6,6sp,7,7plus,8,8plus , X, XS, iPhone 11, iPhone 12, iPhone 13, v.v. Bán đảo động cung cấp giao diện người dùng hoạt hình linh hoạt cho các mục sau: </blue>
 
 
 <br>
