--- a/infodeb/Amber/index.html
+++ b/infodeb/Amber/index.html
@@ -6,7 +6,7 @@ Kể từ phiên bản 1.1.0, nút chuyển đổi đã bị loại bỏ và nó
 <li> 
 
 
-Công tắc chuyển đổi CC / Flipswitch để cho phép cài đặt đèn LED màu màu vàng ánh hoặc cả đèn LED màu trắng và màu vàng ánh
+Công tắc chuyển đổi CC / Flipswitch để cho phép cài đặt đèn LED màu vàng ánh hoặc cả đèn LED màu trắng và màu vàng ánh
 <br>
 <li>
 
@@ -29,12 +29,12 @@ Phiên bản mới nhất hiện tại
 
 <tr><td>Phiên bản</td><td>
 
-1.1.0
+1.2.0
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-19/07/2022
+19/04/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
