--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@ CHECK IMEI FREE BY BVN
  </div>
 <div class="filter animated fadecydia" id="caption">Hãy nhấp vào đây</div>
 </div>
+</div>
 
 </div>
   </div>
