--- a/CHECKLOCK/index.html
+++ b/CHECKLOCK/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Check Sim Lock Free</title>
+	<title>Check Sim Lock Status</title>
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="bvn.png">
+	<link rel="icon" type="image/png" href="romgoc.png">
 <meta property="og:type" content="website">
   <meta property="og:title" content="Check Sim Lock/Nhà Mạng">
   <meta property="og:description" content="Trang web check sim lock và kiểm tra nhà mạng miễn phí không giới hạn">
-  <meta property="og:image" content="bvn.png">
-  <meta property="og:image:alt" content="bvn.net">
+  <meta property="og:image" content="romgoc.png">
+  <meta property="og:image:alt" content="romgoc.net">
 	<style>
 		body {
 			background-color: #f2f2f2;
@@ -171,7 +171,7 @@ ul li:last-child {
 <body>
       <div style="background-color: #4CAF50; color: #fff; text-align: center; padding: 10px;">
     <marquee behavior="scroll" direction="left">
-      BVN Mobile dịch vụ phần mềm Mobile | Hỗ trợ all Smartphone | Liên Hệ: 094.333.7789
+      BVN Mobile dịch vụ phần mềm Mobile | Hỗ trợ All Smart Phone | Liên hệ :094.333.7789
     </marquee>
   </div>
 <h1 class="gradient-text large-text">Check Sim Lock/Nhà Mạng Free</h1>
@@ -197,7 +197,7 @@ ul li:last-child {
 		<label for="serial2">Serial:</label>
 		<input type="text" name="serial2" id="serial2" required>
 		<br><br>
-		<input type="submit" value="Bắt đầu check" onclick="showLoading2()">
+		<input type="submit" value="Bắt đầu Check" onclick="showLoading2()">
 	</form>
 
 <div class="loading">
@@ -269,7 +269,7 @@ ul li:last-child {
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <p class="copy">&copy; 2023 BVN MOBILE</p>
+        <p class="copy">&copy; 2023 BVN MOBILE SERVICES</p>
       </div>
       <div class="col-md-6">
         <ul class="footer-nav">
