--- a/infodeb/PowerSelector1/index.html
+++ b/infodeb/PowerSelector1/index.html
@@ -44,23 +44,23 @@ Copy WiFi IP: Sao chép địa chỉ IP Wi-Fi hiện tại.
 
 
 
-<li><a target="_blank" href="Screenshots/1.jpg?size=full">
-<img src="Screenshots/1.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/1.png?size=full">
+<img src="Screenshots/1.png?size=medium"/></a></li>
 
-<li><a target="_blank" href="Screenshots/2.jpg?size=full">
-<img src="Screenshots/2.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/2.png?size=full">
+<img src="Screenshots/2.png?size=medium"/></a></li>
 
-<li><a target="_blank" href="Screenshots/3.jpg?size=full">
-<img src="Screenshots/3.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/3.png?size=full">
+<img src="Screenshots/3.png?size=medium"/></a></li>
 
-<li><a target="_blank" href="Screenshots/4.jpg?size=full">
-<img src="Screenshots/4.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/4.png?size=full">
+<img src="Screenshots/4.png?size=medium"/></a></li>
 
-<li><a target="_blank" href="Screenshots/5.jpg?size=full">
-<img src="Screenshots/5.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/5.png?size=full">
+<img src="Screenshots/5.png?size=medium"/></a></li>
 
-<li><a target="_blank" href="Screenshots/6.jpg?size=full">
-<img src="Screenshots/6.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/6.png?size=full">
+<img src="Screenshots/6.png?size=medium"/></a></li>
 
 
 
