--- a/infodeb/PullOver/index.html
+++ b/infodeb/PullOver/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-<red>Bạn cần cài đặt tinh chỉnh CrackTool4 và mở nó trên màn hình chính sau khi cài đặt PullOver Pro để kích hoạt tinh chỉnh. 
+<red>Hỗ trợ Xina520 đã Crack sẵn.
 
 <br>
 <li>
@@ -38,10 +38,10 @@ PullOver là một phím tắt đa nhiệm mới thanh lịch mà bất kỳ jai
 <panel-header><label><panel style="margin-top: -14px;" class="modern changes-panel"><ttp class="name">Nội dung cập nhật</ttp></label></panel-header><panel-body style="margin-top: -10px;"><span class="change-content">
 
 <li>
-
-15.16
+15.17 fix lỗi Camera 
 <br>
 <li>
+
 Hỗ trợ iOS 15 - 16
 
 </li>
@@ -55,7 +55,7 @@ Hỗ trợ iOS 15 - 16
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-5/03/2023
+20/5/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
