--- a/infodeb/Zetsu/index.html
+++ b/infodeb/Zetsu/index.html
@@ -2,7 +2,7 @@
 <br><li><span>
 
 
-<blue>Mở nhiều cửa sổ ứng dụng trên iOS 13 - 14 Tinh chỉnh Zetsu miễn phí được tạo bởi @Csyhi có tính năng mở nhiều ứng dụng cùng một lúc trên iPhone và iPad .</blue>
+<blue>Mở nhiều cửa sổ ứng dụng trên iOS 13/14/15 Tinh chỉnh Zetsu miễn phí được tạo bởi @Csyhi có tính năng mở nhiều ứng dụng cùng một lúc trên iPhone và iPad .</blue>
 
 
 <br>
@@ -22,7 +22,7 @@ Xem video phía dưới để biết rõ hơn...
 
 
 
-<li><a target="_blank" href="Screenshots/1.p4?size=full">
+<li><a target="_blank" href="Screenshots/1.mp4?size=full">
 <img src="Screenshots/1.mp4?size=medium"/></a></li>
 
 
@@ -39,12 +39,12 @@ Phiên bản mới nhất hiện tại
 
 <tr><td>Phiên bản</td><td>
 
-1.0
+1.2
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-09/01/2022
+21/05/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -54,9 +54,9 @@ Phiên bản mới nhất hiện tại
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-13.0-14.8.1
+iOS 13/14/15/16
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
