--- a/infodeb/Zetsu/index.html
+++ b/infodeb/Zetsu/index.html
@@ -14,7 +14,7 @@
 <br>
 <li>
 
-Xem video phía dưới để biết rõ hơn...
+Xem ảnh phía dưới để biết rõ hơn...
 
 </span></li></lable><br>
 <ul class="screenshot-viewer">
@@ -22,8 +22,8 @@ Xem video phía dưới để biết rõ hơn...
 
 
 
-<li><a target="_blank" href="Screenshots/1.mp4?size=full">
-<img src="Screenshots/1.mp4?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/1.png?size=full">
+<img src="Screenshots/1.png?size=medium"/></a></li>
 
 
 </ul></panel-body></panel>
