--- a/infodeb/SettingsRevamp2/index.html
+++ b/infodeb/SettingsRevamp2/index.html
@@ -37,14 +37,16 @@ Và 1 số tính năng khác
 
 
 
-<li><a target="_blank" href="Screenshots/1.jpg?size=full">
-<img src="Screenshots/1.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/1.png?size=full">
+<img src="Screenshots/1.png?size=medium"/></a></li>
 
-<li><a target="_blank" href="Screenshots/2.jpg?size=full">
-<img src="Screenshots/2.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/2.png?size=full">
+<img src="Screenshots/2.png?size=medium"/></a></li>
 
-<li><a target="_blank" href="Screenshots/3.jpg?size=full">
-<img src="Screenshots/3.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/3.png?size=full">
+<img src="Screenshots/3.png?size=medium"/></a></li>
+
+
 
 
 
