--- a/infodeb/Font3/index.html
+++ b/infodeb/Font3/index.html
@@ -9,8 +9,8 @@
 
 
 
-<li><a target="_blank" href="Screenshots/1.jpg?size=full">
-<img src="Screenshots/1.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/1.png?size=full">
+<img src="Screenshots/1.png?size=medium"/></a></li>
 
 
 
