--- a/infodeb/PullOver/index.html
+++ b/infodeb/PullOver/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
-<red>Hỗ trợ Xina520 đã Crack sẵn.
+<red>Hỗ trợ thêm cho Xina520 đã Crack sẵn.
 
 <br>
 <li>
@@ -42,7 +42,7 @@ PullOver là một phím tắt đa nhiệm mới thanh lịch mà bất kỳ jai
 <br>
 <li>
 
-Hỗ trợ iOS 15 - 16
+Hỗ trợ iOS 11 - 16
 
 </li>
 
@@ -65,7 +65,7 @@ Hỗ trợ iOS 15 - 16
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-15.0-16.3
+11.0-16.3
 
 
 
