--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </center>
 <br>
     <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-NHẤP VÀO BÊN DƯỚI ĐỂ THÊM NGUỒN VÀO TRÌNH QUẢN LÝ GÓI CỦA BẠN
+NHẤP VÀO BÊN DƯỚI ĐỂ THÊM NGUỒN (CLICK BELOW TO ADD SOURCE)
     </div>
 
 <div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
