--- a/infodeb/Choicy/index.html
+++ b/infodeb/Choicy/index.html
@@ -10,8 +10,8 @@ Chặn phát hiện Jailbreak cho ứng dụng của bạn.
 
 
 
-<li><a target="_blank" href="Screenshots/1.jpg?size=full">
-<img src="Screenshots/1.jpg?size=medium"/></a></li>
+<li><a target="_blank" href="Screenshots/1.png?size=full">
+<img src="Screenshots/1.png?size=medium"/></a></li>
 
 
 
@@ -30,12 +30,12 @@ Phiên bản mới nhất hiện tại
 
 <tr><td>Phiên bản</td><td>
 
-1.4.7
+1.4.10
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-13/04/2023
+12/06/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -45,7 +45,7 @@ Phiên bản mới nhất hiện tại
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-10.0-15.7.1
+10.0-16.4.1
 
 
 
