--- a/infodeb/PicsArt/index.html
+++ b/infodeb/PicsArt/index.html
@@ -1,27 +1,8 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
- Ẩn Số sê-ri trong Cài đặt 
+Picsart cao cấp,hỗ trợ phiên bản mới nhất! 
 
-<br>
-<li>
-
-<blue>Trang giới thiệu:</blue>
-
-<br>
-<li>
-
-Bạn có thể chỉnh sửa các mục trong trang Giới thiệu của Settngs.app (ngoài Bài hát, Video và Ảnh).  Chưa kiểm tra Hai SIM Vui lòng thiết lập trong cài đặt.  
-
-<br>
-<li>
-
-Ngay cả theo mặc định, số sê-ri và địa chỉ MAC đều bị ẩn.
-
-<br>
-<li>
-
-<red>XEM HÌNH ẢNH PHÍA DƯỚI ĐỂ BIẾT RÕ HƠN...</red>
 
 </span></li></lable><br>
 <ul class="screenshot-viewer">
@@ -31,11 +12,6 @@ Ngay cả theo mặc định, số sê-ri và địa chỉ MAC đều bị ẩn.
 
 <li><a target="_blank" href="Screenshots/1.png?size=full">
 <img src="Screenshots/1.png?size=medium"/></a></li>
-
-<li><a target="_blank" href="Screenshots/2.jpg?size=full">
-<img src="Screenshots/2.png?size=medium"/></a></li>
-
-
 
 </ul></panel-body></panel>
 <panel-header><label><panel style="margin-top: -14px;" class="modern changes-panel"><ttp class="name">Nội dung cập nhật</ttp></label></panel-header><panel-body style="margin-top: -10px;"><span class="change-content">
@@ -50,24 +26,24 @@ Phiên Bản Mới Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-0.0.2
+22.4.4
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-12/6/2023
+12/06/2023
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
 
-71 KB
+127 KB
 
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-12.2 - 15.4.1
+15.0 - 16.4.1
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
