--- a/infodeb/HideSerialNumber/index.html
+++ b/infodeb/HideSerialNumber/index.html
@@ -1,27 +1,9 @@
 <!DOCTYPE html><html></div><head><meta charset="utf-8"><meta content='width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=0' name='viewport' /><link rel="stylesheet" href="../Bvn/Set.css"><panel class="modern"><panel-body><div class="package-header"><div class="labels cydia-hide sileo-hide"></div><panel class="modern"><panel-header><lable><ttp class="name">Mô tả và Giới thiệu</ttp></lable></panel-header></panel><lable>
 <br><li><span>
 
- Ẩn Số sê-ri trong Cài đặt 
+Tinh chỉnh giúp thay đổi hoặc ẩn toàn bộ thông tin trong phần Giới thiệu
 
-<br>
-<li>
 
-<blue>Trang giới thiệu:</blue>
-
-<br>
-<li>
-
-Bạn có thể chỉnh sửa các mục trong trang Giới thiệu của Settngs.app (ngoài Bài hát, Video và Ảnh).  Chưa kiểm tra Hai SIM Vui lòng thiết lập trong cài đặt.  
-
-<br>
-<li>
-
-Ngay cả theo mặc định, số sê-ri và địa chỉ MAC đều bị ẩn.
-
-<br>
-<li>
-
-<red>XEM HÌNH ẢNH PHÍA DƯỚI ĐỂ BIẾT RÕ HƠN...</red>
 
 </span></li></lable><br>
 <ul class="screenshot-viewer">
