--- a/infodeb/HideSerialNumber/index.html
+++ b/infodeb/HideSerialNumber/index.html
@@ -18,6 +18,9 @@ Tinh chỉnh giúp thay đổi hoặc ẩn toàn bộ thông tin trong phần Gi
 <img src="Screenshots/2.png?size=medium"/></a></li>
 
 
+<li><a target="_blank" href="Screenshots/3.jpg?size=full">
+<img src="Screenshots/3.png?size=medium"/></a></li>
+
 
 </ul></panel-body></panel>
 <panel-header><label><panel style="margin-top: -14px;" class="modern changes-panel"><ttp class="name">Nội dung cập nhật</ttp></label></panel-header><panel-body style="margin-top: -10px;"><span class="change-content">
